# base

./: .gitignore  CONSTITUTION.md  Cargo.toml  Justfile  README.md  arkhe-constitution-dashboard.json  arkhe-os-genesis.sh  arkhe-os-monorepo.txt  arkhe_gguf_generator.py  convert_to_english.py  dashboard-b20.yml  deny.toml  docker-compose.prod.yml  fix_deny.py  fix_deny2.py  fix_deny_2.py  fix_deny_3.py  fix_deny_4.py  fix_deny_5.py  fix_deny_6.py  fix_deny_7.py  fix_docker.sh  fix_mcp.sh  fix_mcp2.sh  fix_sdk_rs.sh  format.patch  generate_monorepo.py  grafana-dashboard.json  justfile  lychee.toml  opencode.json  patch.sh  patch_10.sh  patch_3.sh  patch_4.sh  patch_5.sh  patch_6.sh  patch_7.sh  patch_8.sh  patch_9.sh  (+26 more)
arkhe-os/: Cargo.toml  Makefile  README.md  scaffold.py
arkhe-os/.cargo/: config.toml
arkhe-os/.github/workflows/: agi-ci.yml
arkhe-os/crates/arkhe-agents/: Cargo.toml
arkhe-os/crates/arkhe-agi/: Cargo.toml
arkhe-os/crates/arkhe-apex/: Cargo.toml
arkhe-os/crates/arkhe-asset/: Cargo.toml
arkhe-os/crates/arkhe-bootmaker/: Cargo.toml
arkhe-os/crates/arkhe-bridge/: Cargo.toml
arkhe-os/crates/arkhe-consensus-tpm/: Cargo.toml
arkhe-os/crates/arkhe-core/: Cargo.toml
arkhe-os/crates/arkhe-identity/: Cargo.toml
arkhe-os/crates/arkhe-llm/: Cargo.toml
arkhe-os/crates/arkhe-metacognition/: Cargo.toml
arkhe-os/crates/arkhe-neural/: Cargo.toml
arkhe-os/crates/arkhe-openwrt-adapter/: Cargo.toml
arkhe-os/crates/arkhe-payment/: Cargo.toml
arkhe-os/crates/arkhe-symbolic/: Cargo.toml
arkhe-os/crates/arkhe-ventoy-adapter/: Cargo.toml
arkhe-os/tests/: integration.rs
arkhe_tensorzkp_gpu_daemon_substrate_26/cathedral-cm4/: Cargo.toml
arkhe_tensorzkp_gpu_daemon_substrate_26/cathedral-cm4/src/: main.rs
arkhe_tensorzkp_gpu_daemon_substrate_26/tensorzkp-daemon/: Cargo.toml
arkhe_tensorzkp_gpu_daemon_substrate_26/tensorzkp-daemon/src/: main.rs
bridge/: Cargo.toml  build.rs
bridge/src/: main.rs
cathedral-33t/: Cargo.toml
cathedral-33t/src/: config.rs  lib.rs  platform.rs  tensor.rs
cathedral-33t/src/attention/: csa.rs  hca.rs  mla.rs  mod.rs  rope.rs  sliding_window.rs
cathedral-33t/src/mhc/: mod.rs
cathedral-33t/src/moe/: expert.rs  load_balancer.rs  mod.rs  router.rs
cathedral-33t/src/optimizer/: mod.rs  mona.rs
cathedral-33t/src/placement/: hybrid_ep.rs  mod.rs  occult.rs
cathedral-33t/src/routing/: anticipatory.rs  mod.rs
cathedral-33t/src/speculative/: eagle3.rs  mod.rs
cathedral-33t/src/utils/: math.rs
cathedral-33t/tests/: unit_test.rs
cathedral-arkhe/cem-adapter/: Cargo.toml
cathedral-arkhe/cem-adapter/src/: lib.rs
cathedral-arkhe/sail-zk-pipeline/: Cargo.toml
cathedral-arkhe/sail-zk-pipeline/src/: lib.rs
cathedral-arkhe/sdk-rs/: Cargo.toml  build.rs
cathedral-arkhe/sdk-rs/src/: lib.rs
cathedral-arkhe/test-utils/: Cargo.toml
cathedral-arkhe/test-utils/src/: fault_injection.rs  granular_partition.rs  lib.rs  mock_council.rs
cathedral-arkhe/tests/: Cargo.toml  circuit.circom  conftest.py  integration_test.rs  performance_test.rs  property_test.rs  resilience_test.rs  stress_test.rs  test_vector_theosis.py
cathedral-code/: Cargo.toml
cathedral-code/crates/cathedral-core/: Cargo.toml
cathedral-code/crates/cathedral-harness/: Cargo.toml
cathedral-code/crates/cathedral-identity/: Cargo.toml
cathedral-code/crates/cathedral-orchestration/: Cargo.toml
cathedral-code/crates/cathedral-permissions/: Cargo.toml
cathedral-code/crates/cathedral-remix-bridge/: Cargo.toml
cathedral-code/crates/cathedral-server/: Cargo.toml
cathedral-code/crates/cathedral-tools/: Cargo.toml
cathedral-code/crates/cathedral-wormgraph/: Cargo.toml
cathedral-code/crates/cathedral-zk/: Cargo.toml
cathedral-dcops/: Cargo.toml
cathedral-dcops/crates/cathedral-agent-capacity/: Cargo.toml
cathedral-dcops/crates/cathedral-agent-compliance/: Cargo.toml
cathedral-dcops/crates/cathedral-agent-energy/: Cargo.toml
cathedral-dcops/crates/cathedral-agent-monitoring/: Cargo.toml
cathedral-dcops/crates/cathedral-agent-security/: Cargo.toml
cathedral-dcops/crates/cathedral-api/: Cargo.toml
cathedral-dcops/crates/cathedral-arkheobex/: Cargo.toml
cathedral-dcops/crates/cathedral-cli/: Cargo.toml
cathedral-dcops/crates/cathedral-dcops-core/: Cargo.toml
cathedral-dcops/crates/cathedral-dcops-runtime/: Cargo.toml
cathedral-dcops/crates/cathedral-identity/: Cargo.toml
cathedral-dcops/crates/cathedral-observer/: Cargo.toml
cathedral-dcops/crates/cathedral-resilience/: Cargo.toml
cathedral-dcops/crates/cathedral-self-improve/: Cargo.toml
cathedral-dcops/crates/cathedral-test-support/: Cargo.toml
cathedral-dcops/crates/cathedral-wormgraph/: Cargo.toml
cathedral-dcops/crates/cathedral-xtask/: Cargo.toml
cathedral-dcops/crates/cathedral-zk/: Cargo.toml
cathedral-llm/: Cargo.toml
cathedral-llm/crates/cathedral-api/: Cargo.toml
cathedral-llm/crates/cathedral-arkheobex/: Cargo.toml
cathedral-llm/crates/cathedral-cli/: Cargo.toml
cathedral-llm/crates/cathedral-identity/: Cargo.toml
cathedral-napi/: Cargo.toml
cathedral-napi/src/: lib.rs
crates/arkhe-governance/: Cargo.toml
crates/arkhe-governance/src/: flock.rs  (+5 more)
crates/arkhe-nexus-governance/: Cargo.toml
crates/arkhe-parsing/: Cargo.toml
crates/arkhe-security-audit/: Cargo.toml
crates/cathedral-agi/: Cargo.toml
crates/cathedral-bridge/: Cargo.toml
crates/cathedral-episodic/: Cargo.toml
crates/cathedral-fallback/: Cargo.toml
crates/cathedral-scheduler/: Cargo.toml
crates/cathedral-tee/: Cargo.toml
crates/safe-core-bridge/: Cargo.toml
crates/safe-core-governance/: Cargo.toml
crates/safe-core-utils/: Cargo.toml
crates/safe-core-verifier/: Cargo.toml
orchestrator/: Cargo.toml
orchestrator/examples/: causal_geometry_demo.rs  deployment_simulation_demo.rs
orchestrator/src/: attestation.rs  context.rs  governance.rs  identity_derivation.rs  lib.rs  sandbox.rs  subagent_communication.rs  subagent_persistence.rs  subagent_spawner.rs
orchestrator/tests/: b20_integration_tests.rs
sdk-rs/: Cargo.toml
sdk-rs/src/: lib.rs
(+646 files in other folders)
