[package]
name = "cathedral-arkhe-33t"
version = "4.0.0"
edition = "2021"
authors = ["Cathedral ARKHE Team <cathedral@arkhe.ai>"]
description = "Cathedral ARKHE 33T v4.0 — ASI Architecture with Multiplatform Support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cathedral-arkhe/cathedral-33t"
readme = "README.md"
rust-version = "1.75"

[workspace]

[features]
default = ["tensor-backend-ndarray"]

# Backends de tensor
tensor-backend-ndarray = ["dep:ndarray", "dep:ndarray-rand"]
tensor-backend-tch = ["dep:tch"]
tensor-backend-candle = ["dep:candle-core"]
tensor-backend-metal = ["candle-core/metal"]
tensor-backend-directml = []
tensor-backend-nnapi = []

# Funcionalidades opcionais
ssm = []           # SSM Engine (Mamba-2)
symbolic = []      # Neuro-Symbolic Reasoner
swarm = []         # Swarm Coordination Layer
consistency = []   # Behavioral Consistency Engine

# Perfis de deployment
deployment-server = ["tensor-backend-tch", "ssm", "symbolic", "swarm", "consistency"]
deployment-desktop = ["tensor-backend-candle", "ssm"]
deployment-mobile = ["tensor-backend-candle", "tensor-backend-metal", "tensor-backend-nnapi"]

[dependencies]
# Core
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
once_cell = "1.21.4"
rand = "0.8.5"
rand_distr = "0.4.3"
num-traits = "0.2.19"

# Backends
ndarray = { version = "0.15.6", features = ["rayon", "serde"], optional = true }
ndarray-rand = { version = "0.14.0", optional = true }
tch = { version = "0.19.0", optional = true }
candle-core = { version = "0.8.4", optional = true, features = ["cuda"] }

# Utilidades
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
bincode = "1.3"
hex = "0.4"
rayon = "1.12.0"

# Para Android/iOS
jni = { version = "0.22.4", optional = true }     # Android
objc = { version = "0.2", optional = true }     # iOS

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[dev-dependencies]
criterion = "0.8.2"
mockito = "1.7.0"
tokio-test = "0.4.5"


[[bin]]
name = "train"
path = "src/bin/train.rs"
[[bin]]
name = "infer"
path = "src/bin/infer.rs"
[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

# Configuração para compilação cruzada
[package.metadata.cross]
target = "x86_64-unknown-linux-gnu"  # padrão
