[workspace]
resolver = "2"
members = [
    "crates/cathedral-core",
    "crates/cathedral-identity",
    "crates/cathedral-wormgraph",
    "crates/cathedral-zk",
    "crates/cathedral-remix-bridge",
    "crates/cathedral-server",
    "crates/cathedral-cli",
    "crates/cathedral-harness",
    "crates/cathedral-orchestration",
    "crates/cathedral-tools",
    "crates/cathedral-permissions",
    "crates/cathedral-self-improve",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Cathedral ARKHE ORCHESTRATOR <orcid:0009-0005-2697-4668>"]
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
dashmap = "6"
