[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Cathedral ARKHE ORCHESTRATOR <orcid:0009-0005-2697-4668>"]
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"
rand = "0.8"
