[workspace]
[package]
name = "cathedral-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
blake3 = "1"
cathedral-embodied-no_std = { path = "../cathedral-embodied-no_std" }
