[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
nalgebra = "0.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
prometheus = "0.13"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
axum = { workspace = true, features = ["tokio", "http1", "json"] }
sha2.workspace = true
blake3.workspace = true
hex.workspace = true
hmac = "0.12.1"

[lib]
path = "src/lib.rs"
