[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
nalgebra = "0.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
prometheus = "0.13"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
bitcoin = "0.32.100"
ethers = "2.0.14"
anchor-lang = "1.0.2"
borsh = "1.6.1"
solana-sdk = "2.0.1"
solana-client = "2.0.0"
cosmwasm-std = "3.0.7"
cw-storage-plus = "3.0.1"
schemars = "1.2.1"
sha2.workspace = true
hex = { workspace = true, features = ["std"] }

[lib]
path = "src/lib.rs"
