[package]
name = "cathedral-cm4"
version = "26.5.0"
edition = "2021"
authors = ["Arquiteto ORCID 0009-0005-2697-4668"]
description = "Cathedral ARKHE v26.5 — CM4 Firmware"
license = "MIT"

[dependencies]
heapless = "0.8"
blake3 = { version = "1.5", default-features = false }

[[bin]]
name = "cathedral-cm4"
path = "src/main.rs"
