[package]
name = "tensorzkp-daemon"
version = "26.5.0"
edition = "2021"
authors = ["Arquiteto ORCID 0009-0005-2697-4668"]
description = "Cathedral ARKHE v26.5 — TensorZKP GPU Daemon"
license = "MIT"

[dependencies]
serialport = "4.2"
crc32fast = "1.3"
signal-hook = "0.3"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cudarc = { version = "0.12", features = ["nvrtc", "cuda-12000"] }
