[package]
name = "cem-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
arkhe-wormgraph = { path = "../wormgraph", package = "arkhe-wormgraph" }
arkhe-observer-5d = { path = "../observer-5d", package = "observer-5d" }
cathedral-atlassian = { path = "../cathedral-atlassian" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
chrono.workspace = true
rand.workspace = true

[features]
production = ["cathedral-atlassian/production"]
