[package]
name = "sail-zk-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
arkhe-zk-circuits = { path = "../zk-circuits", package = "arkhe-zk-circuits" }
arkhe-risc0-backend = { path = "../zk-risc0", package = "arkhe-zk-risc0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
