[package]
name = "arkhe-governance"
version = "2.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.4"
tokio = { version = "1.0", features = ["full"] }

arkhe-flock = { path = "../arkhe-flock", optional = true }

[features]
default = []
flock = ["dep:arkhe-flock"]
