[package]
name = "arkhe-parsing"
version = "0.1.0"
edition = "2021"
authors = ["Arkhe Research Group orcid:0009-0005-2697-4668"]
description = "Safe parsing utilities for Arkhe OS"
license = "MIT OR Apache-2.0"

[dependencies]
regex = "1.10"
once_cell = "1.19"
nom = "7.1"
thiserror = "1.0"
tracing = "0.1"
sha3 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = ["ethereum"]
ethereum = ["dep:sha3", "dep:hex"]

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing_bench"
harness = false
