[package]
name = "cathedral-agi"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc", "std"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["clock"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
blake3 = { workspace = true }
cathedral-scheduler = { path = "../cathedral-scheduler" }
cathedral-episodic = { path = "../cathedral-episodic" }
cathedral-tee = { path = "../cathedral-tee" }
cathedral-fallback = { path = "../cathedral-fallback" }
async-trait = "0.1"
