[package]
name = "cathedral-bridge"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
tonic = "0.14"
tokio = { version = "1", features = ["full"] }
tonic-build = "0.14"
prost = "0.14"
uuid = { version = "1.6", features = ["v4"] }
serde_json = "1.0"
chrono = "0.4"
blake3 = "1.8"
tracing = "0.1"

# To avoid adding the big real dependencies right now
cathedral-zk-risc0 = { path = "../cathedral-zk-risc0" }
cathedral-zk-circuits = { path = "../cathedral-zk-circuits" }
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-nostr = { path = "../cathedral-nostr" }
nostr-sdk = "0.30"
