[package]
name = "cathedral-episodic"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc", "std"] }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.2", features = ["v4"] }
chrono = { workspace = true, features = ["clock"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
async-trait = "0.1"
tempfile = "3"
