[package]
name = "cathedral-scheduler"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc", "std"] }
anyhow = { workspace = true }
tracing = { workspace = true }
prometheus = { version = "0.13", features = ["process"] }
uuid = { version = "1.2", features = ["v4"] }
chrono = { workspace = true, features = ["clock"] }
rand = { workspace = true }
