[package]
name = "cathedral-tee"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc", "std"] }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
cathedral-lc3-vm = { path = "../cathedral-lc3-vm" }
tokio = { workspace = true, features = ["full"] }
