[package]
name = "safe-core-bridge"
version = "0.1.0"
edition = "2021"
description = "Integration API — Ethics, Monitoring, Invariants via HTTP + MCP"

[features]
default = []
mcp = ["dep:rmcp"]

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
safe-core-types = { path = "../safe-core-types" }
safe-core-ethics = { path = "../safe-core-ethics" }
safe-core-lean4 = { path = "../safe-core-lean4" }

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }

# Optional: MCP integration via rmcp 2.0.0
# Compile with: cargo build -p safe-core-bridge --features mcp
rmcp = { version = "2.0", optional = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
