
[package]
name = "safe-core-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
rand = "0.9"

[features]
default = []
cgf = []
anti-vibe = []
